# fraud-prediction-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: creditcard.yaml  pipeline.yaml
notebooks/: new_dataset_walkthrough.ipynb
scripts/: run_creditcard.py  run_pipeline.py
src/data/: ingest.py  preprocess.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/serving/: app.py
tests/unit/: test_metrics.py  test_preprocess.py
